@@ -24,7 +24,7 @@ WHAT IS NEW?
     * Attack option to set a tag (with a number of options relating to what
       triggers the tag, and conditional to another tag) [Mike Caron]
       
-    * Added bitset to cap damage at 9999 (Final Fantasy style) [Mike Caron]
+    * Added damage cap option (in General Game Data) [Mike Caron]
 
   * Bug Fixes
 
@@ -62,6 +62,7 @@ WHAT IS NEW?
     * "read NPC" (counterpart of alter NPC) [James Paige]
     * "set hero level", "give experience", "hero levelled",
       "spells learnt" [Ralph Versteegen]
+    * "get damage cap", "set damage cap" [Mike Caron]
     * "get music volume", "set music volume" [Ralph Versteegen]
 
   * Stuff only Developers Will Notice
